--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ install:
   - pip install -e .
 script:
   - py.test . --cov --cov-report term-missing -v
-after-success:
+after_success:
   - coveralls
