--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ install:
   - pip install pytest-pep8 coverage pytest-cov -U 
   - pip install -e .
 script:
-  - py.test . --cov --cov-report term-missing -v
+  - py.test tests/ --cov --cov-report term-missing -v
 after_success:
   - coveralls
