--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ after_success:
 - coveralls
 deploy:
   on:
-    branch: master
+    tags: true
   provider: pypi
   distributions: sdist
   user: lext
