--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,13 @@ python:
 - '3.6'
 install:
 - pip install -U twine
-- pip install coveralls
+- pip install codecov
 - pip install pytest-pep8 coverage pytest-cov -U
 - pip install -e .
 script:
 - py.test tests --cov solt --cov-report term-missing -v
 after_success:
-- coveralls
+- codecov
 deploy:
   on:
     tags: true
