--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ matrix:
     - python: 3.7
       dist: xenial
       sudo: true
-
+jobs:
+  include:
+    - stage:
 install:
 - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
 - bash miniconda.sh -b -p $HOME/miniconda
@@ -28,9 +30,9 @@ install:
 script:
 - py.test tests --cov solt --cov-report term-missing -v
 - flake8
-- travis-sphinx build --source=./doc/source/
 after_success:
 - codecov
+- travis-sphinx build --source=./doc/source/
 - travis-sphinx deploy
 deploy:
   on:
