--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,17 @@
 language: python
-os:
-  - linux
-  - osx
 
-python: 3.6
-python: 3.7
+matrix:
+  include:
+    - os: linux
+      dist: xenial
+      sudo: true
+      python: 3.6
+
+    - os: linux
+      dist: xenial
+      sudo: true
+      python: 3.7
+
 
 install:
 - sh ci/conda_setup.sh
