--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,14 @@ language: python
 
 matrix:
   include:
-    - os: linux
+    - name: "Linux / Python 3.7"
+      os: linux
       dist: xenial
       sudo: true
       python: 3.6
 
-    - os: linux
+    - name: "Linux / Python 3.7"
+      os: linux
       dist: xenial
       sudo: true
       python: 3.7
