--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ install:
 - conda install -y -n solt_test_env pandoc
 - source activate solt_test_env
 - pip install pytest-flake8
-- pip install ci/requirements.txt
+- pip install -r ci/requirements.txt
 - pip install .
 script:
 - py.test tests --cov solt --cov-report term-missing -v
@@ -51,4 +51,4 @@ deploy:
   - provider: script
     script: sh ci/doc_build.sh
     on:
-      branch: master
+      tags: true
