--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ install:
   - export OPATH="$PATH" && export PATH="$HOME/miniconda/bin:$PATH"
   - conda create -q -y -n solt python=$TRAVIS_PYTHON_VERSION
   - conda install -y pandoc -n solt
-  - conda install pytorch torchvision cpuonly -c pytorch -n solt
+  - conda install -y pytorch torchvision cpuonly -c pytorch -n solt
   - conda activate solt
   - pip install -r ci/requirements.txt
   - pip install .
