--- a/.travis.yml
+++ b/.travis.yml
@@ -39,10 +39,10 @@ install:
   - sh ci/conda_setup.sh
   - bash $HOME/miniconda.sh -b -p $HOME/miniconda
   - export OPATH="$PATH" && export PATH="$HOME/miniconda/bin:$PATH"
-  - conda create -q -y -n solt python=$TRAVIS_PYTHON_VERSION
-  - conda install -y pandoc -n solt
-  - conda install -y pytorch torchvision cpuonly -c pytorch -n solt
+  - conda create -q -y -n solt_test_env python=$TRAVIS_PYTHON_VERSION
   - conda activate solt
+  - conda install -y pandoc
+  - conda install -y pytorch torchvision cpuonly -c pytorch
   - pip install -r ci/requirements.txt
   - pip install .
 script:
