--- a/.travis.yml
+++ b/.travis.yml
@@ -40,10 +40,10 @@ install:
   - bash $HOME/miniconda.sh -b -p $HOME/miniconda
   - export OPATH="$PATH" && export PATH="$HOME/miniconda/bin:$PATH"
   - conda create -q -y -n solt_test_env python=$TRAVIS_PYTHON_VERSION
-  - conda init
-  - conda activate solt
-  - conda install -y pandoc
-  - conda install -y pytorch torchvision cpuonly -c pytorch
+  - conda create -q -y -n solt_test_env python=$TRAVIS_PYTHON_VERSION
+  - conda install -y -n solt_test_env pandoc
+  - conda install -y -n solt_test_env pytorch torchvision cpuonly -c pytorch
+  - source activate solt_test_env
   - pip install -r ci/requirements.txt
   - pip install .
 script:
