pre-commit refinement, black in the requirements now

--- a/ci/requirements.txt
+++ b/ci/requirements.txt
@@ -1,12 +1,13 @@
-pytest==3.6.4
-pytest-flake8==1.0.2
-ipykernel==4.8.2
+black==19.10b0
 codecov==2.0.15
-pytest-pep8==1.0.6
 coverage==5.0.3
-pytest-cov==2.6.0
-sphinx==1.8.4
-nbsphinx-link==1.2
-travis-sphinx==2.2.1
+ipykernel==4.8.2
 msmb-theme==1.2.0
+nbsphinx-link==1.2
+pytest==3.6.4
+pytest-cov==2.6.0
+pytest-flake8==1.0.2
+pytest-pep8==1.0.6
+sphinx==1.8.4
 sphinx-rtd-theme==0.4.1
+travis-sphinx==2.2.1
