--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,7 @@ install:
   - pip install .
 script:
   - py.test tests --cov solt --cov-report term-missing -v
+  - black --config=black.toml --check .
   - flake8
 after_success:
   - codecov
