--- a/benchmark/requirements.txt
+++ b/benchmark/requirements.txt
@@ -2,6 +2,6 @@ albumentations==0.4.3
 augmentor==0.2.8
 pillow-simd==7.0.0.post3
 pytablewriter
+solt==1.9.0
 torch==1.4.0
 torchvision===0.5.0
-#solt==1.9.0
