fixed the bug in serialization, added a keypoint example to the README, added a test

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ doc/build/
 docs/build/
 solt/__pycache__/
 .idea/*
+.ipynb_checkpoints
 .DS_Strore
 notebooks/Affine_testing.ipynb
 notebooks/annotation/
