--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,16 +1,19 @@
 repos:
 - repo: https://github.com/ambv/black
-  rev: 19.10b0
+  rev: 22.6.0
   hooks:
   - id: black
     args: [--config=black.toml]
-- repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: v2.3.0
+- repo: https://github.com/pycqa/flake8
+  rev: 4.0.1
   hooks:
   - id: flake8
     args: [--max-line-length=120]
     exclude: ^tests/
-  - id: check-case-conflict
-  - id: check-symlinks
-  - id: end-of-file-fixer
-  - id: requirements-txt-fixer
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v4.3.0
+  hooks:
+    - id: check-case-conflict
+    - id: check-symlinks
+    - id: end-of-file-fixer
+    - id: requirements-txt-fixer
