--- a/ci/requirements.txt
+++ b/ci/requirements.txt
@@ -1,13 +1,14 @@
-black==19.10b0
-codecov==2.0.15
+black-22.6.0
+codecov-2.1.12
 coverage==5.0.3
 ipykernel==4.8.2
 msmb-theme==1.2.0
 nbsphinx-link==1.2
-opencv-python-headless==4.1.2.30
+#opencv-python-headless==4.1.2.30
+opencv-python-headless==4.6.0.66
 pytest==3.6.4
 pytest-cov==2.6.0
-pytest-flake8==1.0.2
+pytest-flake8-1.1.1
 pytest-pep8==1.0.6
 sphinx==1.8.4
 sphinx-rtd-theme==0.4.1
