--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
-        operating-system: [ubuntu-latest, windows-latest, macos-11]
+        operating-system: [ubuntu-latest]
         python-version: [3.6, 3.7, 3.8, 3.9]
       fail-fast: false
     steps:
@@ -25,13 +25,16 @@ jobs:
       run: python -m pip install --upgrade pip
     - name: Install wheel
       run: python -m pip install --upgrade wheel
-    - name: Install PyTorch on Linux and Windows
-      if: >
-        matrix.operating-system == 'ubuntu-latest' ||
-        matrix.operating-system == 'windows-latest'
-      run: >
-        pip install torch==1.8.1+cpu torchvision==0.9.1+cpu
-        -f https://download.pytorch.org/whl/torch_stable.html
-    - name: Install PyTorch on MacOS
-      if: matrix.operating-system == 'macos-latest'
-      run: pip install torch==1.8.1 torchvision==0.9.1
+    - name: Install dependencies
+      run: pip install -r ci/requirements.txt
+    - name: Install solt
+      run: pip install .
+    - name: Run tests
+      run: py.test tests --cov solt --cov-report term-missing -v
+    - name: Run black
+      run: black --config=black.toml --check .
+    - name: Run flake8
+      run: flake8
+    - name: Run codecov
+      run: codecov
+
