--- a/ci/requirements.txt
+++ b/ci/requirements.txt
@@ -4,12 +4,8 @@ coverage==5.0.3
 ipykernel==4.8.2
 msmb-theme==1.2.0
 nbsphinx-link==1.2
-#opencv-python-headless==4.1.2.30
 opencv-python-headless==4.6.0.66
 pytest==3.6.4
 pytest-cov==2.6.0
-pytest-flake8-1.1.1
+pytest-flake8=1.1.1
 pytest-pep8==1.0.6
-sphinx==1.8.4
-sphinx-rtd-theme==0.4.1
-travis-sphinx==2.2.1
