--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
-        operating-system: [ubuntu-latest]
+        operating-system: [ubuntu-latest, macos-11]
         python-version: [3.7, 3.8, 3.9]
       fail-fast: false
     steps:
@@ -37,4 +37,4 @@ jobs:
       run: flake8
     - name: Run codecov
       run: codecov
-
+      
