--- a/ci/requirements.txt
+++ b/ci/requirements.txt
@@ -1,7 +1,7 @@
-black==24.3.0
+black==22.6.0
 codecov==2.1.13
 coverage==6.4.1
-opencv-python-headless==4.6.0.66
+opencv-python-headless>=4.6.0.66
 pytest==7.1.2
 pytest-cov==3.0.0
 pytest-flake8==1.1.1
