--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
-        operating-system: [ubuntu-latest, macos-11]
+        operating-system: [ubuntu-latest,]
         python-version: [3.7, 3.8, 3.9, 3.10, 3.11, 3.12]
       fail-fast: false
     steps:
